--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta name="description" content="Bean Bliss Coffee serves handcrafted artisan coffee in Sandton, South Africa. Enjoy lattes, cappuccinos, and pastries in our cozy café or order online.">
 <meta name="keywords" content="Bean Bliss Coffee, Sandton café, coffee shop Sandton, artisan coffee, order coffee online, best cappuccino South Africa">
 <meta name="author" content="Bean Bliss Coffee">
+  <meta name="google-site-verification" content="VODYMBAGUJKSCy2s30X7R_V4ID753yogsuZekNw4WlI" />
 <!-- Open Graph -->
 <meta property="og:title" content="Bean Bliss Coffee | Artisan Coffee in Sandton" />
 <meta property="og:description" content="Crafted coffee. Comfort in every sip. Visit Bean Bliss in Sandton or order online." />
@@ -26,7 +27,24 @@
 <!-- AOS JS -->
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 
-
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Thapelo B",
+  "url": "https://dotiagency.co.za/",
+  "jobTitle": "Web Designer",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Doti Agency"
+  },
+  "sameAs": [
+    "https://www.linkedin.com/in/thapelob", 
+    "https://github.com/thapelob", 
+    "https://https://dotiagency.co.za/"
+  ]
+}
+</script>
 </head>
 <body>
 
@@ -124,7 +142,7 @@
 </section>
 
 <footer>
-  <p>&copy; 2025 Bean Bliss Coffee. All rights reserved.</p>
+  <p>&copy; 2025 Bean Bliss Coffee. Designed by <a href="https://dotiagency.co.za/" target="_blank" rel="noopener">Doti Agency</a></p>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 <script>
@@ -134,24 +152,7 @@
 </script>
 <script src="script.js"></script>
 
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "CafeOrCoffeeShop",
-  "name": "Bean Bliss Coffee",
-  "image": "https://yourdomain.com/images/logo.png",
-  "address": {
-    "@type": "PostalAddress",
-    "addressLocality": "Sandton",
-    "addressRegion": "Gauteng",
-    "addressCountry": "ZA"
-  },
-  "url": "https://yourdomain.com",
-  "servesCuisine": "Coffee, Pastries",
-  "priceRange": "R",
-  "openingHours": "Mo-Sa 07:00-17:00, Su 08:00-14:00"
-}
-</script>
+
 
 </body>
 </html>
